<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="40dp" />


    <EditText
        android:id="@+id/doc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/doc" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name" />

    <EditText
        android:id="@+id/apell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/apell" />

    <EditText
        android:id="@+id/usu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/usu" />

    <EditText
        android:id="@+id/pas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/pas" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="63dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="142dp"
            android:layout_height="match_parent"
            android:onClick="accionRegistrar"
            android:text="@string/button1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="130dp"
            android:layout_height="63dp"
            android:onClick="buscarPorDoc"
            android:text="@string/button2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="138dp"
            android:layout_height="63dp"
            android:onClick="listar"
            android:text="@string/button3" />
    </TableRow>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/LV_Lista"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>